[MutlideviceSettings] Gate multidevice settings for guest profiles

This CL fixes issue with settings page crashing in guest profiles.

Bug: 896870
Change-Id: I39f4df84843e723b25300fefb8936c7839c3bd8d
Reviewed-on: https://chromium-review.googlesource.com/c/1289952
Reviewed-by: Ryan Hansberry <hansberry@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Azeem Arshad <azeemarshad@chromium.org>
Commit-Queue: Ryan Hansberry <hansberry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601308}