chrome/browser/ui/webui/settings/md_settings_ui.cc
@@ -220,7 +220,8 @@ MdSettingsUI::MdSettingsUI(content::WebUI* web_ui)
   }
   AddSettingsPageUIHandler(
       std::make_unique<chromeos::settings::KeyboardHandler>());
-  if (base::FeatureList::IsEnabled(
+  if (!profile->IsGuestSession() &&
+      base::FeatureList::IsEnabled(
           chromeos::features::kEnableUnifiedMultiDeviceSetup) &&
       base::FeatureList::IsEnabled(
           chromeos::features::kEnableUnifiedMultiDeviceSettings) &&
